add index templates

--- a/message/templates/message/index.html
+++ b/message/templates/message/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="{% static 'message/assets/css/fontawesome.css' %}">
     <link rel="stylesheet" href="{% static 'message/assets/css/templatemo-snapx-photography.css' %}">
     <link rel="stylesheet" href="{% static 'message/assets/css/owl.css' %}">
-    <link rel="stylesheet" href="assets/css/animate.css' %}">
+    <link rel="stylesheet" href="{% static 'message/assets/css/animate.css' %}">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 <!--
 
